# the-evaluator

./: .gitignore  app.py  config.py  genetic_algorithm.py  main.py  problems.py  prompt_generator.py  results_db.py  scoring.py  setup.sh  simulation_manager.py  streamlit_app.py  visualization.py
benchmark_tool/: Dockerfile  pyproject.toml  requirements.txt  sandbox.py  ts-sandbox.js  typescript.Dockerfile
