[tool.poetry]
name = "benchmark-tool"
version = "0.1.0"
description = ""
authors = ["Deus Vult <kazuke353@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
httpx = "^0.28.1"
pylint = "^3.3.7"
deap = "^1.4.3"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
